+ Added health bar pulse (missing random spot spawning) + Added status box blurry rectangle with coordinate movement +Added several animations and property changes for gradient blending ~ Fixed menu options so there is a white pulse overtime ~ Changed a few css style names

--- a/src/app/silent-hill/components/menuoption/menuoption.module.css
+++ b/src/app/silent-hill/components/menuoption/menuoption.module.css
@@ -1,9 +1,20 @@
-.spinning__border {
-    padding: 2px 1px;
+.outer__border {
+    padding: 2px 2px;
 }
 
-.spinning__border:hover {
-    border: 2px solid #a0a3ef;
+.outer__border:hover {
+    border: 3px solid;
+    border-image: linear-gradient(130deg, #a0a3ef 0%, #a0a3ef 25%, transparent 25%, transparent 75%, #a0a3ef 75%, #a0a3ef 100%) 1;
+}
+
+.outer__border:hover .container {
+    cursor: pointer;
+    border: #6b65c8 3px solid;
+}
+
+.outer__border:hover .menu__text {
+    background: linear-gradient(rgba(0, 0, 0, var(--alphaPos)) 15%, rgba(255, 255, 255, var(--alphaPos)) 45%, rgba(255, 255, 255, var(--alphaPos)) 55%, rgba(0, 0, 0, var(--alphaPos)) 85%);
+    animation: whitePulse 3s infinite ease-in-out;
 }
 
 .container {
@@ -13,11 +24,6 @@
     box-sizing: border-box;
     height: 100%;
     padding: 6px 5px;
-}
-
-.spinning__border:hover .container {
-    cursor: pointer;
-    border: #6b65c8 2px solid;
 }
 
 .menu__option {
@@ -37,16 +43,27 @@
     min-width: 180px;
 }
 
-.spinning__border:hover .menu__option {
-    animation: whitePulse 3s infinite ease-in-out;
+@property --alphaPos {
+    syntax: "<percentage>";
+    inherits: false;
+    initial-value: 0%;
+}
+
+.menu__text {
+    text-align: center;
+    background: linear-gradient(rgba(0, 0, 0, 0%) 15%, rgba(255, 255, 255, 0%) 45%, rgba(255, 255, 255, 0%) 55%, rgba(0, 0, 0, 0%) 85%);
+    width: 100%;
 }
 
 @keyframes whitePulse {
-    0%, 100% {
-        background: linear-gradient(black 15%, var(--dynamic-bg) 45%, var(--dynamic-bg) 55%, black 85%);
+    0% {
+        --alphaPos: 0%;
     }
     50% {
-        background: linear-gradient(black 15%, white 45%, white 55%, black 85%);
+        --alphaPos: 100%;
+    }
+    100% {
+        --alphaPos: 0%;
     }
 }
 
